# Backend

./: Cargo.toml  Dockerfile  README.md  dck.sh
api/: openapi.yaml
src/: main.rs
src/backend/: mod.rs  operation.rs
src/blockchain/: block.rs  miner.rs  mod.rs  transaction.rs  util.rs
src/p2p/: mod.rs  network.rs  node.rs  packet.rs  peer_discovery.rs  shared.rs
src/rest/: server.rs
