[package]
name = "bike_blockchain_backend"
version = "0.1.0"
authors = ["Christoffer Gustafsson <christoffer.golf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
sha2 = "0.8.0"
rust_sodium = "0.10.2"
bincode = "1.2.0"
