[package]
name = "bike_blockchain_backend"
version = "0.1.0"
authors = ["Christoffer Gustafsson <christoffer.golf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
bincode = "1.2.0"
sha2 = "0.8.0"
rand = "0.7.2"
rust_sodium = "0.10.2"
rocket = "0.4.2"
base64 = "0.11.0"
futures = "0.1.20"
tokio = "0.1.22"
bytes = "0.4"
